# g2llery

./: .gitignore  README.md  README.org  cabal.project  g2llery.cabal  package.yaml
dev/: dependencies.nix  init.sh  shell.nix.patch
src/: Main.hs  Orphans.hs
