cabal-version: 1.12

name:           g2llery
version:        0.1.0.0
homepage:       https://github.com/eyeinsky/g2llery#readme
bug-reports:    https://github.com/eyeinsky/g2llery/issues
author:         Markus Läll
maintainer:     markus.l2ll@gmail.com
license:        GPL-2
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/eyeinsky/g2llery

executable g2llery
  main-is: Main.hs
  other-modules: Paths_g2llery
  hs-source-dirs: src
  build-depends:
      base
    , directory
    , optparse-applicative
    , rapid
    , warp
    , warp-tls
    , web
    , web-url
  default-language: GHC2021
