cabal-version: 3.4

name:           g2llery
version:        0.1.0.0
homepage:       https://github.com/eyeinsky/g2llery#readme
bug-reports:    https://github.com/eyeinsky/g2llery/issues
author:         Markus Läll
maintainer:     markus.l2ll@gmail.com
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/eyeinsky/g2llery

executable g2llery
  main-is: Main.hs
  other-modules: Paths_g2llery
  hs-source-dirs: src
  build-depends:
      base
    , directory
    , optparse-applicative
    , rapid
    , servant-server
    , threatlevel-common
    , threatlevel-unsorted
    , threatlevel-url
    , threatlevel-web
    , warp
    , warp-tls
  default-language: GHC2021
  default-extensions:
    ImportQualifiedPost
    StandaloneDeriving
